==> TranHung1813/make_stm32f1/Make_stm32f1/02.GD32F330/Bootloader/port/board_hw/board_hw.c <==
#include "board_hw.h"
#include "main.h"
#include "app_debug.h"
#include "gd32f3x0_gpio.h"
#include "gd32f3x0_i2c.h"
#include "flash_if.h"
#define APP_FLASH_HEADER_BUFFER_VALID       0x1234
#define FLASH_LOG_LOCK()
#define FLASH_LOG_UNLOCK()
#define LL_GPIO_IsInputPinSet           gpio_input_bit_get
#define LL_GPIO_TogglePin               gpio_bit_toggle
#define LL_GPIO_SetOutputPin(x, y)      gpio_bit_write(x, y, (bit_status)1)
#define LL_GPIO_ResetOutputPin(x, y)    gpio_bit_write(x, y, (bit_status)0)
#define DISABLE_HEARTBEAT_GPIO_IRQ()    nvic_irq_disable(EXTI2_3_IRQn)
#define ENABLE_HEARTBEAT_GPIO_IRQ()     nvic_irq_enable(EXTI2_3_IRQn, 2U, 0U)
#define DISABLE_FM_UART_IRQ()           usart_receive_config(FM_USARTPeripheral, USART_RECEIVE_DISABLE)
#define ENABLE_FM_UART_IRQ()        usart_receive_config(FM_USARTPeripheral, USART_RECEIVE_ENABLE)
#define DISABLE_HOST_UART_IRQ()           usart_receive_config(HOST_USARTPeripheral, USART_RECEIVE_DISABLE)
#define ENABLE_HOST_UART_IRQ()        usart_receive_config(HOST_USARTPeripheral, USART_RECEIVE_ENABLE)
#define USE_PT2257 1
#include "pt2257.h"
#define IOEX_MODE_OUTPUT 0
#define IOEX_MODE_INPUT  1
#define USART_FM_LCD_RX_BUFFER_SIZE     256
#define USART_HOST_RX_BUFFER_SIZE       128
#define USE_DMA_TX_USART_HOST           0
#define EEPROM_FLAG_HOST_DIE            0x12345678
#define APP_EEPROM_RESET_REASON_ADDRESS 0x0800FC00

void board_hw_initialize(void)
{
    rcu_periph_clock_enable(RCU_GPIOA);
    rcu_periph_clock_enable(RCU_GPIOB);
    rcu_periph_clock_enable(RCU_GPIOC);
    rcu_periph_clock_enable(RCU_GPIOD);
    rcu_periph_clock_enable(RCU_GPIOF);
    
//    rcu_periph_clock_enable(RCU_ADC);
//    rcu_periph_clock_enable(RCU_USART0);
//    rcu_periph_clock_enable(RCU_USART1);
//    rcu_periph_clock_enable(RCU_DMA);
//    rcu_periph_clock_enable(RCU_I2C0);
    
    // Init watchdog
    rcu_osci_on(RCU_IRC40K);
    
    /* wait till IRC40K is ready */
    rcu_osci_stab_wait(RCU_IRC40K);
    
    fwdgt_config(4095, FWDGT_PSC_DIV256);
   
    FWDGT_CTL = FWDGT_KEY_ENABLE;
    
    /* configure the lvd threshold to 3v */
    pmu_lvd_select(PMU_LVDT_6);
    
    // init gpio

    // Smart module power control
    gpio_mode_set(SMART_MODULE_PWR_CONTROL_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, SMART_MODULE_PWR_CONTROL_Pin);
    gpio_output_options_set(SMART_MODULE_PWR_CONTROL_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SMART_MODULE_PWR_CONTROL_Pin);
    LL_GPIO_SetOutputPin(SMART_MODULE_PWR_CONTROL_GPIO_Port, SMART_MODULE_PWR_CONTROL_Pin);   
    
    // Smart module power key
    gpio_mode_set(SMART_MODULE_PWR_KEY_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, SMART_MODULE_PWR_KEY_Pin);
    gpio_output_options_set(SMART_MODULE_PWR_KEY_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SMART_MODULE_PWR_KEY_Pin);
    LL_GPIO_ResetOutputPin(SMART_MODULE_PWR_KEY_GPIO_Port, SMART_MODULE_PWR_KEY_Pin);  
    
    // EXT watchdog
    gpio_mode_set(EXT_WDT_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, EXT_WDT_Pin);
    gpio_output_options_set(EXT_WDT_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, EXT_WDT_Pin);
    LL_GPIO_SetOutputPin(EXT_WDT_GPIO_Port, EXT_WDT_Pin);   
    
    // Smart module reset
    gpio_mode_set(SMART_MODULE_RST_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, SMART_MODULE_RST_Pin);
    gpio_output_options_set(SMART_MODULE_RST_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SMART_MODULE_RST_Pin);
    LL_GPIO_ResetOutputPin(SMART_MODULE_RST_GPIO_Port, SMART_MODULE_RST_Pin);   
    
    // Smart module power lost pin
    gpio_mode_set(TO_SM_POWER_STATE_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, TO_SM_POWER_STATE_Pin);
    gpio_output_options_set(TO_SM_POWER_STATE_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, TO_SM_POWER_STATE_Pin);
    LL_GPIO_ResetOutputPin(TO_SM_POWER_STATE_GPIO_Port, TO_SM_POWER_STATE_Pin);   
    

    // Heartbeat isr
    rcu_periph_clock_enable(RCU_CFGCMP);
    gpio_mode_set(HEARTBEAT_GPIO_Port, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, HEARTBEAT_Pin);
    
    // Enable EXTI interrupt
//    nvic_irq_enable(EXTI2_3_IRQn, 2U, 0U);
//    syscfg_exti_line_config(EXTI_SOURCE_GPIOB, EXTI_SOURCE_PIN2);
//    exti_init(EXTI_2, EXTI_INTERRUPT, EXTI_TRIG_BOTH);
//    exti_interrupt_flag_clear(EXTI_2);
    
    
    // Audio switch in and out
    gpio_mode_set(SW_OUT_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, SW_OUT_Pin);
    gpio_output_options_set(SW_OUT_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SW_OUT_Pin);
    LL_GPIO_ResetOutputPin(SW_OUT_GPIO_Port, SW_OUT_Pin);   
    
    gpio_mode_set(SW_IN_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, SW_IN_Pin);
    gpio_output_options_set(SW_IN_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SW_IN_Pin);
    LL_GPIO_ResetOutputPin(SW_IN_GPIO_Port, SW_IN_Pin);   
    
    // Disable uart min protocol with host, currently unuse, use as gpio    
    gpio_mode_set(DISABLE_HOST_UART_PIN_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, DISABLE_HOST_UART_PIN_Pin);
    gpio_output_options_set(DISABLE_HOST_UART_PIN_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, DISABLE_HOST_UART_PIN_Pin);
    LL_GPIO_ResetOutputPin(DISABLE_HOST_UART_PIN_GPIO_Port, DISABLE_HOST_UART_PIN_Pin);   
    
    // PA control pin    
    gpio_mode_set(PA_CONTROL_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, PA_CONTROL_Pin);
    gpio_output_options_set(PA_CONTROL_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, PA_CONTROL_Pin);
    LL_GPIO_ResetOutputPin(PA_CONTROL_GPIO_Port, PA_CONTROL_Pin);   
    
    // Input audio detect 1234    
    gpio_mode_set(INPUT1_GPIO_Port, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, INPUT1_Pin);
    gpio_mode_set(INPUT2_GPIO_Port, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, INPUT2_Pin);
    gpio_mode_set(INPUT3_GPIO_Port, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, INPUT3_Pin);
    gpio_mode_set(INPUT4_GPIO_Port, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, INPUT4_Pin);
    
    // Output opto 12
    gpio_mode_set(OUTPUT1_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, OUTPUT1_Pin);
    gpio_output_options_set(OUTPUT1_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, OUTPUT1_Pin);
    LL_GPIO_ResetOutputPin(OUTPUT1_GPIO_Port, OUTPUT1_Pin);   
    
    gpio_mode_set(OUTPUT2_GPIO_Port, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, OUTPUT2_Pin);
    gpio_output_options_set(OUTPUT2_GPIO_Port, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, OUTPUT2_Pin);
    LL_GPIO_ResetOutputPin(OUTPUT2_GPIO_Port, OUTPUT2_Pin);   
    
//    board_hw_usart_host_initialize();
//    board_hw_usart_fm_lcd_initialize();
//    board_hw_adc_initialize();
//    ioex_gpio_init();
//    
//#if USE_PT2257
//    pt2257_init(&m_pt2257_drv);
//#endif

}

void board_hw_watchdog_feed(void)
{
    FWDGT_CTL = FWDGT_KEY_RELOAD;
    LL_GPIO_TogglePin(EXT_WDT_GPIO_Port, EXT_WDT_Pin);
}

void board_hw_output_toggle(board_hw_output_num_t num)
{
    switch (num)
    {
        case BOARD_HW_OUTPUT_LED_1_R:
           // LL_GPIO_TogglePin(LED1_R_GPIO_Port, LED1_R_Pin);
            break;
        case BOARD_HW_OUTPUT_LED_1_B:
           // LL_GPIO_TogglePin(LED1_B_GPIO_Port, LED1_B_Pin);
            break;
        case BOARD_HW_OUTPUT_LED_2_R:
            //LL_GPIO_TogglePin(LED2_R_GPIO_Port, LED2_R_Pin);
            break;
        case BOARD_HW_OUTPUT_LED_2_B:
            //LL_GPIO_TogglePin(LED2_B_GPIO_Port, LED2_B_Pin);
            break;  
        case BOARD_HW_OUTPUT_SW_OUT:
            LL_GPIO_TogglePin(SW_OUT_GPIO_Port, SW_OUT_Pin);
            break;
        case BOARD_HW_OUTPUT1:
            LL_GPIO_TogglePin(OUTPUT1_GPIO_Port, OUTPUT1_Pin);
            break;
        case BOARD_HW_OUTPUT2:
            LL_GPIO_TogglePin(OUTPUT2_GPIO_Port, OUTPUT2_Pin);
            break; 
        case BOARD_HW_OUTPUT_PA:
            LL_GPIO_TogglePin(PA_CONTROL_GPIO_Port, PA_CONTROL_Pin);
            break;        
        case BOARD_HW_OUTPUT_SW_IN:
            LL_GPIO_TogglePin(SW_IN_GPIO_Port, SW_IN_Pin);
            break; 
        default:
            break;
    }
}

void board_hw_output_set(board_hw_output_num_t num, bool level)
{
    if (level)
    {
        switch (num)
        {
            case BOARD_HW_OUTPUT_LED_1_R:
                //LL_GPIO_SetOutputPin(LED1_R_GPIO_Port, LED1_R_Pin);
                break;
            case BOARD_HW_OUTPUT_LED_1_B:
                //LL_GPIO_SetOutputPin(LED1_B_GPIO_Port, LED1_B_Pin);
                break;
            case BOARD_HW_OUTPUT_LED_2_R:
                //LL_GPIO_SetOutputPin(LED2_R_GPIO_Port, LED2_R_Pin);
                break;
            case BOARD_HW_OUTPUT_LED_2_B:
                //LL_GPIO_SetOutputPin(LED2_B_GPIO_Port, LED2_B_Pin);
                break;  
            case BOARD_HW_OUTPUT_SW_OUT:
                LL_GPIO_SetOutputPin(SW_OUT_GPIO_Port, SW_OUT_Pin);
                break;
            case BOARD_HW_OUTPUT1:
                LL_GPIO_SetOutputPin(OUTPUT1_GPIO_Port, OUTPUT1_Pin);
                break;
            case BOARD_HW_OUTPUT2:
                LL_GPIO_SetOutputPin(OUTPUT2_GPIO_Port, OUTPUT2_Pin);
                break; 
            case BOARD_HW_OUTPUT_PA:
                LL_GPIO_SetOutputPin(PA_CONTROL_GPIO_Port, PA_CONTROL_Pin);
                break;    
            case BOARD_HW_MODULE_RESET:
                LL_GPIO_SetOutputPin(SMART_MODULE_RST_GPIO_Port, SMART_MODULE_RST_Pin);
                break;      
            case BOARD_HW_MODULE_PWR_ON:
                LL_GPIO_SetOutputPin(SMART_MODULE_PWR_CONTROL_GPIO_Port, SMART_MODULE_PWR_CONTROL_Pin);
                break;      
            case BOARD_HW_MODULE_PWR_KEY:
                LL_GPIO_SetOutputPin(SMART_MODULE_PWR_KEY_GPIO_Port, SMART_MODULE_PWR_KEY_Pin);
                break;     
            case BOARD_HW_OUTPUT_SW_IN:
                LL_GPIO_SetOutputPin(SW_IN_GPIO_Port, SW_IN_Pin);
            break;         
            case BOARD_HW_OUTPUT_SW_POWER_NOTIFICATION:
                LL_GPIO_SetOutputPin(TO_SM_POWER_STATE_GPIO_Port, TO_SM_POWER_STATE_Pin);
                break;
            
            default:
                break;
        }
    }
    else
    {
        switch (num)
        {
            case BOARD_HW_OUTPUT_LED_1_R:
                //LL_GPIO_ResetOutputPin(LED1_R_GPIO_Port, LED1_R_Pin);
                break;
            case BOARD_HW_OUTPUT_LED_1_B:
                //LL_GPIO_ResetOutputPin(LED1_B_GPIO_Port, LED1_B_Pin);
                break;
            case BOARD_HW_OUTPUT_LED_2_R:
                //LL_GPIO_ResetOutputPin(LED2_R_GPIO_Port, LED2_R_Pin);
                break;
            case BOARD_HW_OUTPUT_LED_2_B:
                //LL_GPIO_ResetOutputPin(LED2_B_GPIO_Port, LED2_B_Pin);
                break;  
            case BOARD_HW_OUTPUT_SW_OUT:
                LL_GPIO_ResetOutputPin(SW_OUT_GPIO_Port, SW_OUT_Pin);
                break;
            case BOARD_HW_OUTPUT1:
                LL_GPIO_ResetOutputPin(OUTPUT1_GPIO_Port, OUTPUT1_Pin);
                break;
            case BOARD_HW_OUTPUT2:
                LL_GPIO_ResetOutputPin(OUTPUT2_GPIO_Port, OUTPUT2_Pin);
                break; 
            case BOARD_HW_OUTPUT_PA:
                LL_GPIO_ResetOutputPin(PA_CONTROL_GPIO_Port, PA_CONTROL_Pin);
                break;        
            case BOARD_HW_MODULE_RESET:
                LL_GPIO_ResetOutputPin(SMART_MODULE_RST_GPIO_Port, SMART_MODULE_RST_Pin);
                break;      
            case BOARD_HW_MODULE_PWR_ON:
                LL_GPIO_ResetOutputPin(SMART_MODULE_PWR_CONTROL_GPIO_Port, SMART_MODULE_PWR_CONTROL_Pin);
                break;      
            case BOARD_HW_MODULE_PWR_KEY:
                LL_GPIO_ResetOutputPin(SMART_MODULE_PWR_KEY_GPIO_Port, SMART_MODULE_PWR_KEY_Pin);
                break; 
            case BOARD_HW_OUTPUT_SW_IN:
                LL_GPIO_ResetOutputPin(SW_IN_GPIO_Port, SW_IN_Pin);
            break;   
            case BOARD_HW_OUTPUT_SW_POWER_NOTIFICATION:
                LL_GPIO_ResetOutputPin(TO_SM_POWER_STATE_GPIO_Port, TO_SM_POWER_STATE_Pin);
                break;
            
            default:
                break;
        }
    }
}
