==> TranHung1813/make_stm32f1/Make_stm32f1/port_hw/stm32/board_hw/board_hw.c <==
#include "board_hw.h"
#include "main.h"
#include "usart.h"
#include "app_debug.h"
#include "stm32l0xx_hal.h"
#include "stm32l0xx_hal_flash_ex.h"
#include "i2c.h"
#define RTC_ERROR_NONE    0
#define RTC_ERROR_TIMEOUT 1
#define USE_PT2257 1
#include "pt2257.h"
#define IOEX_MODE_OUTPUT 0
#define IOEX_MODE_INPUT  1
#define USART_FM_LCD_RX_BUFFER_SIZE     256
#define USART_HOST_RX_BUFFER_SIZE       128
#define USE_DMA_TX_USART_HOST           0
#define EEPROM_FLAG_HOST_DIE            0x12345678
#define APP_EEPROM_RESET_REASON_ADDRESS 0x08080000
#define APP_EEPROM_RESET_COUNTER_ADDRESS 0x08080008
#define APP_EEPROM_CRITICAL_ADDRESS     0x0808000C
#define PT2257_ADDR 0x88

void board_hw_initialize(void)
{
    board_hw_usart_host_initialize();
    board_hw_usart_fm_lcd_initialize();
    board_hw_adc_initialize();
    ioex_gpio_init();
    
#if USE_PT2257
    pt2257_init(&m_pt2257_drv);
#endif
}

void board_hw_watchdog_feed(void)
{
    WRITE_REG(IWDG->KR, LL_IWDG_KEY_RELOAD);
    LL_GPIO_TogglePin(EXT_WDT_GPIO_Port, EXT_WDT_Pin);
}

void board_hw_output_toggle(board_hw_output_num_t num)
{
    for (uint32_t i = 0; i < BOARD_HW_OUTPUT_MAX; i++)
    {
        if (num == m_gpio_output[i].index && m_gpio_output[i].port_addr && m_gpio_output[i].pin_addr)
        {
            LL_GPIO_TogglePin(m_gpio_output[i].port_addr, m_gpio_output[i].pin_addr);
            return;
        }
    }
}

void board_hw_output_set(board_hw_output_num_t num, bool level)
{
    for (uint32_t i = 0; i < BOARD_HW_OUTPUT_MAX; i++)
    {
        if (num == m_gpio_output[i].index && m_gpio_output[i].port_addr && m_gpio_output[i].pin_addr)
        {
            if (level)
                LL_GPIO_SetOutputPin(m_gpio_output[i].port_addr, m_gpio_output[i].pin_addr);
            else
                LL_GPIO_ResetOutputPin(m_gpio_output[i].port_addr, m_gpio_output[i].pin_addr);
            return;
        }
    }
}
